--- a/style.css
+++ b/style.css
@@ -1,4 +1,20 @@
-# a change to style in css branch
+h3 {
+  font-size: 18px;
+  margin-left: 20px;
+}
+
+h1 {
+  font-size: 32px;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+a:link, a:visited {
+  color: #03C;
+}
+
 body {
   padding: 20px;
   font-family: Verdana, Arial, Helvetica, sans-serif;
